--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=[]
+list=Array[Dictionary]([{
+"base": &"RefCounted",
+"class": &"Card",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Card.gd"
+}])
