--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -4,4 +4,16 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/Card.gd"
+}, {
+"base": &"RefCounted",
+"class": &"GameMode",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/GameMode.gd"
+}, {
+"base": &"RefCounted",
+"class": &"Player",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Player.gd"
 }])
