--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Card.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/GameMode.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Card.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd"]
-selected_script="res://Scripts/Card.gd"
+selected_script="res://Scripts/GameMode.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
