Worked on startround + misc

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,7 +36,7 @@ selected_main_editor_idx=2
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Card.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd"]
-selected_script="res://Scripts/GameMode.gd"
+selected_script="res://Scripts/Player.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
