--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -6,6 +6,12 @@ list=Array[Dictionary]([{
 "path": "res://Scripts/Card.gd"
 }, {
 "base": &"RefCounted",
+"class": &"Deck",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Deck.gd"
+}, {
+"base": &"RefCounted",
 "class": &"GameMode",
 "icon": "",
 "language": &"GDScript",
