added scenes and debugging

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,15 +11,21 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/Deck.gd"
 }, {
-"base": &"RefCounted",
+"base": &"Node2D",
 "class": &"GameMode",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/GameMode.gd"
 }, {
-"base": &"RefCounted",
+"base": &"Node2D",
 "class": &"Player",
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/Player.gd"
+}, {
+"base": &"Card",
+"class": &"StandardCard",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/StandardCard.gd"
 }])
