--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -21,6 +21,8 @@ scenes=["res://Player.tscn", "res://MainScene.tscn"]
 Node2D:scale=true
 Sprite2D:scale=true
 AnimatedSprite2D:scale=true
+Camera2D:zoom=true
+Camera2D:scale=true
 
 [dialog_bounds]
 
