--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://playerSprite.jpg")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainScene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://MainScene.tscn", "res://Player.tscn")
-current_scene="res://MainScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/UI_Game.tscn")
+current_scene="res://Scenes/UI_Game.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Card.gd", "res://Scripts/Deck.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd", "res://Scripts/StandardCard.gd"]
-selected_script="res://Scripts/GameMode.gd"
+open_scripts=["res://Scripts/Card.gd", "res://Scripts/Deck.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd", "res://Scripts/StandardCard.gd", "res://Scripts/UIGame.gd"]
+selected_script="res://Scripts/UIGame.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
