--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 64,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 80.0,
+"row": 61,
+"scroll_position": 51.975,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 86,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 19,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 6,
+"selection_to_column": 15,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -47,9 +51,23 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 128,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
+"h_scroll_position": 28,
 "row": 58,
-"scroll_position": 5.0,
+"scroll_position": 58.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/StandardCard.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 20,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 24,
+"scroll_position": 13.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
