--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 18,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
-"scroll_position": 15.0,
+"row": 111,
+"scroll_position": 108.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,10 +17,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 86,
+"column": 9,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 66,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 3,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 3,
-"selection_to_column": 66,
-"selection_to_line": 3,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -51,9 +47,9 @@ state={
 "breakpoints": PackedInt32Array(),
 "column": 128,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 264,
+"h_scroll_position": 0,
 "row": 58,
-"scroll_position": 27.0,
+"scroll_position": 26.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
