--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Card.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd", "res://Scripts/StandardCard.gd", "res://Scripts/UIGame.gd"]
-selected_script="res://Scripts/Player.gd"
+selected_script="res://Scripts/GameMode.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
