--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/julia/Desktop/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Users/dutch/Downloads/Godot_v4.2.1-stable_win64.exe(1)/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -41,6 +41,7 @@ CanvasLayer:scale=true
 [dialog_bounds]
 
 create_new_node=Rect2(510, 363, 900, 883)
+project_settings=Rect2(2750, 370, 900, 700)
 
 [scripts_panel]
 
