Decide winner index error fixed

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 <<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/UI_Game.tscn", "res://Scenes/Card/StandardCard.tscn", "res://Scenes/Card/Card.tscn")
-current_scene="res://Scenes/Card/StandardCard.tscn"
+current_scene="res://Scenes/MainScene.tscn"
 center_split_offset=0
 open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/Card/StandardCard.tscn")
 selected_default_debugger_tab_idx=0
