--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/dutch/Downloads/Godot_v4.2.1-stable_win64.exe(1)/Godot_v4.2.1-stable_win64.exe"
+executable_path="C:/Users/julia/Desktop/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
