--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -5,6 +5,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://Scripts/Card.gd"
 }, {
+"base": &"Node",
+"class": &"Chips",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/Chips.gd"
+}, {
 "base": &"RefCounted",
 "class": &"Deck",
 "icon": "",
