--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/MainScene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Scenes/Card/", "res://Assets/", "res://Assets/PlayerSprites/", "res://Assets/CardImg/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Chips.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Scenes/Card/", "res://Assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,15 +30,15 @@ dock_5="Inspector,Node,History"
 <<<<<<<Updatedupstreamopen_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/UI_Game.tscn", "res://Scenes/Card/StandardCard.tscn", "res://Scenes/Card/Card.tscn")
 current_scene="res://Scenes/Card/StandardCard.tscn"
 center_split_offset=0
-open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/Card/StandardCard.tscn")
+open_scenes=PackedStringArray("res://Scenes/MainScene.tscn", "res://Scenes/Player.tscn", "res://Scenes/Card/StandardCard.tscn", "res://Scenes/Chips.tscn")
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Card.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd", "res://Scripts/StandardCard.gd", "res://Scripts/UIGame.gd"]
-selected_script="res://Scripts/GameMode.gd"
+open_scripts=["res://Scripts/Card.gd", "res://Scripts/Chips.gd", "res://Scripts/GameMode.gd", "res://Scripts/Player.gd", "res://Scripts/StandardCard.gd", "res://Scripts/UIGame.gd"]
+selected_script="res://Scripts/Card.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
