--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Node2D",
+"class": &"BigBlind",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/BigBlind.gd"
+}, {
 "base": &"RefCounted",
 "class": &"Card",
 "icon": "",
@@ -28,6 +34,12 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Scripts/Player.gd"
+}, {
+"base": &"Node2D",
+"class": &"SmallBlind",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scripts/SmallBlind.gd"
 }, {
 "base": &"Card",
 "class": &"StandardCard",
